services/iot-sse-server/openshift/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iot-sse-server
    app.kubernetes.io/component: iot-sse-server
    app.kubernetes.io/instance: iot-sse-server
    app.kubernetes.io/part-of: iot-sse-server
    app.openshift.io/runtime-version: latest
  name: iot-sse-server
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8081
  selector:
    app: iot-sse-server
    deploymentconfig: iot-sse-server
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
