services/iot-sse-server/openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2020-09-11T12:02:35Z"
  labels:
    app: iot-sse-server
    app.kubernetes.io/component: iot-sse-server
    app.kubernetes.io/instance: iot-sse-server
    app.kubernetes.io/name: ""
    app.kubernetes.io/part-of: iot-sse-server
    app.openshift.io/runtime: ""
    app.openshift.io/runtime-version: latest
  name: iot-sse-server
spec:
  port:
    targetPort: 8081-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: iot-sse-server
    weight: 100
  wildcardPolicy: None
